objects/Workday_Export__c/Workday_Export__c.object-meta.xml
<CustomObject>
    <label>Workday Export</label>
    <nameField>
        <displayFormat>WEX-{000000000}</displayFormat>
        <label>Entry No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workday Export</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>