objects/Workday_Export__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <label>Employee Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>