objects/Workday_Export__c/fields/Pay_Code__c.field-meta.xml
<CustomField>
    <fullName>Pay_Code__c</fullName>
    <label>Pay Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>