objects/Workday_Export__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <label>Sales Order</label>
    <length>80</length>
    <type>Text</type>
</CustomField>